# 10-Bit-Village-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  hash1.txt
.github/workflows/: _probe.yml  backup-ping.yml
assets/: wanderer_tales.txt
grammars/: action.gbnf
include/cognition/: cognitive_store.h  coinage.h  degradation.h  llama_bridge.h  resolver.h
include/core/: pcg32.h  types.h
include/engine/: genome.h  needs.h  world.h
include/infra/: db.h
replay/: index.html  replay.css  replay.js
replay/reports/: run1-baseline.md  run1-final.md
scripts/: analyze_run.py  backup_restore_gate.sh  export_replay.py  hash_gate.sh  phase1_gate.sh  supervisor.py  ws_spectator_check.py
src/: db.cpp  llama_bridge.cpp  main.cpp  world.cpp
tests/: CMakeLists.txt  _STAGED_test_swap.cpp  event_state_checkpoint.cpp  hearsay_chain.cpp  infer_hybrid.cpp  pin_two_segment_grammar.cpp  pin_vectors.cpp  resolver.cpp  retell_count_checkpoint.cpp  store_test.cpp
